@@ -84,7 +84,6 @@ HEADERS += \
     wtf/PassTraits.h \
     wtf/Platform.h \
     wtf/PossiblyNull.h \
-    wtf/qt/UtilsQt.h \
     wtf/RandomNumber.h \
     wtf/RandomNumberSeed.h \
     wtf/RedBlackTree.h \
