@@ -1,3 +1,15 @@
+2011-10-01  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r96421.
+        http://trac.webkit.org/changeset/96421
+        https://bugs.webkit.org/show_bug.cgi?id=69206
+
+        It broke Qt-WK2 build (Requested by ossy on #webkit).
+
+        * JavaScriptCore.pri:
+        * wtf/qt/UtilsQt.h: Removed.
+        * wtf/wtf.pri:
+
 2011-09-30  Daniel Bates  <dbates@webkit.org>
 
         Attempt to fix the Apple Windows and WinCairo Debug builds after
